# Face_recognition

./: README.md  main.py  pyproject.toml
config/: settings.py
lib/: capture.py  data_loader.py  evaluator.py  model.py  predictor.py  trainer.py
models/: class_names.json
src/: capture_faces.py  evaluate_model.py  predict.py  prepare_data.py  train_model.py  video_predict.py
utils/: face_utils.py
